[package]
name = "demo_std_esp"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-idf-sys = { version = "0.31.11", features = ["binstart"] }
eap = {path = "../eap", default-features=false, features=["tls", "std"]}

[build-dependencies]
embuild = "0.30.4"
