[package]
name = "eap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tls"]
tls = ["dep:rustls", "dep:rustls-pemfile"]

[dependencies]
dummycert = {path = "../dummycert"}
binrw = "0.10.0"
md5 = "0.7.0"
rustls = {version = "0.20.8", optional = true}
rustls-pemfile = {version = "1.0.2", optional = true}
getrandom = "0.2.8"

[dev-dependencies]
rand = {version = "0.8.5"}
