[package]
name = "demo_nostd_esp"
version = "0.1.0"
authors = ["CodeSteak <codesteak@shellf.art>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.7.0" }
esp-backtrace = { version = "0.5.0", features = ["esp32c3", "panic-handler", "print-uart"] }
esp-println       = { version = "0.3.1", features = ["esp32c3"] }
# unused: esp-alloc = { version = "0.2.0", features = ["oom-handler"] }
#
eap = {path = "../../eap", default-features=false}
# unused: no-std-compat = { version = "0.4.1", features = [ "alloc" ] }

[profile.release] 
opt-level = 2