[package]
name = "demo_std_esp"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tls"]
tls = ["eap/tls"]

[dependencies]
esp-idf-sys = { version = "0.31.11", features = ["binstart"] }
eap = {path = "../../eap", default-features=false, features=["tls", "std"]}

[build-dependencies]
embuild = "0.31.1"

[patch.crates-io]
rustls = {git="https://github.com/CodeSteak/eap-demo-esp32-c3-crates", branch = "rustls-0.20.8", optional = true, features=["secret_extraction"]}

[profile.release]
opt-level = 2